renamed paper components to avoid confusion

--- a/codelab-elements/google-codelab/index.html
+++ b/codelab-elements/google-codelab/index.html
@@ -938,17 +938,17 @@ ga(&#39;send&#39;, &#39;pageview&#39;);
 
       <google-codelab-survey survey-id="polymer-maps-1">
         <h4>How would rate your experience with Polymer?</h4>
-        <paper-radio-group>
-          <paper-radio-button>Novice</paper-radio-button>
-          <paper-radio-button>Intermediate</paper-radio-button>
-          <paper-radio-button>Advanced</paper-radio-button>
-        </paper-radio-group>
+        <radio-group>
+          <radio-button>Novice</radio-button>
+          <radio-button>Intermediate</radio-button>
+          <radio-button>Advanced</radio-button>
+        </radio-group>
 
         <h4>How will you use use this tutorial?</h4>
-        <paper-radio-group>
-          <paper-radio-button>I won't</paper-radio-button>
-          <paper-radio-button>Complete it</paper-radio-button>
-        </paper-radio-group>
+        <radio-group>
+          <radio-button>I won't</radio-button>
+          <radio-button>Complete it</radio-button>
+        </radio-group>
       </google-codelab-survey>
 
 
