--- a/sample/test-all-features/index.html
+++ b/sample/test-all-features/index.html
@@ -68,21 +68,21 @@
         <p>Surveys help gather feedback from users. They appear as multiple-choice questions and results are sent to Google Analytics (if configured).</p>
 <google-codelab-survey survey-id="test-all-features-1">
 <h4>How would you rate your programming experience?</h4>
-<paper-radio-group>
-<paper-radio-button>Beginner</paper-radio-button>
-<paper-radio-button>Intermediate</paper-radio-button>
-<paper-radio-button>Advanced</paper-radio-button>
-<paper-radio-button>Expert</paper-radio-button>
-</paper-radio-group>
+<radio-group>
+<radio-button>Beginner</radio-button>
+<radio-button>Intermediate</radio-button>
+<radio-button>Advanced</radio-button>
+<radio-button>Expert</radio-button>
+</radio-group>
 </google-codelab-survey>
 <google-codelab-survey survey-id="test-all-features-2">
 <h4>What is your primary goal for this codelab?</h4>
-<paper-radio-group>
-<paper-radio-button>Learn a new skill</paper-radio-button>
-<paper-radio-button>Build a project</paper-radio-button>
-<paper-radio-button>Prepare for work/interview</paper-radio-button>
-<paper-radio-button>Just exploring</paper-radio-button>
-</paper-radio-group>
+<radio-group>
+<radio-button>Learn a new skill</radio-button>
+<radio-button>Build a project</radio-button>
+<radio-button>Prepare for work/interview</radio-button>
+<radio-button>Just exploring</radio-button>
+</radio-group>
 </google-codelab-survey>
 <aside class="special"><p>Survey responses are stored locally and sent to Google Analytics as custom variables.</p>
 </aside>
