--- a/codelab-elements/demo/embed.html
+++ b/codelab-elements/demo/embed.html
@@ -80,7 +80,7 @@ the License.
 <li>Install <a href="https://chrome.google.com/webstore/detail/chrome-dev-editor-develop/pnoffddplpippgcfjdhbmhkofpnaalpg?hl=en">Chrome Dev Editor</a>&#160;or use your own editor of choice.</li>
 </ul>
 <google-codelab-survey survey-id="test-survey-123"><h4>How&#160;would rate your experience with Polymer?</h4>
-<paper-radio-group><paper-radio-button>Novice</paper-radio-button><paper-radio-button>Intermediate</paper-radio-button><paper-radio-button>Advanced</paper-radio-button></paper-radio-group></google-codelab-survey>
+<radio-group><radio-button>Novice</radio-button><radio-button>Intermediate</radio-button><radio-button>Advanced</radio-button></radio-group></google-codelab-survey>
 
       </google-codelab-step>
 
