--- a/codelab-elements/google-codelab-step/google-codelab-step.html
+++ b/codelab-elements/google-codelab-step/google-codelab-step.html
@@ -240,11 +240,11 @@ margin: 0;
 
     <google-codelab-survey survey-id="polymer-maps-1">
       <h4>How would rate your experience with Polymer?</h4>
-      <paper-radio-group>
-        <paper-radio-button>Novice</paper-radio-button>
-        <paper-radio-button>Intermediate</paper-radio-button>
-        <paper-radio-button>Advanced</paper-radio-button>
-      </paper-radio-group>
+      <radio-group>
+        <radio-button>Novice</radio-button>
+        <radio-button>Intermediate</radio-button>
+        <radio-button>Advanced</radio-button>
+      </radio-group>
     </google-codelab-survey>
 
   </google-codelab-step>
